--- a/proc_example/Makefile
+++ b/proc_example/Makefile
@@ -2,4 +2,4 @@ obj-m := example.o
 KDIR := /lib/modules/$(shell uname -r)/build
 M := $(shell pwd)
 default:
-	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) modules
+	$(MAKE) -C $(KDIR) M=$M modules
